[package]
name = "scheesim-solve"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parking_lot = "*"
scheesim-concurrent = { path = "../scheesim-concurrent" }
scheesim-macro = { path = "../scheesim-macro" }
scheesim-impl = { path = "../scheesim-impl" }